--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [project]
-name = "codekit"
+name = "kit"
 version = "0.1.2"
-description = "A modular toolkit for LLM-powered codebase understanding."
+description = "A modular toolkit for LLM powered codebase understanding."
 authors = [
-    { name = "Cased", email = "ted@cased.com" }
+    { name = "Shane Holloman", email = "shaneholloman@gmail.com" }
 ]
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 license = {text = "MIT"}
 dependencies = [
     "tree-sitter-language-pack>=0.7.2",
@@ -28,7 +28,7 @@ dependencies = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/cased/kit"
+Homepage = "https://github.com/shaneholloman/codekit"
 
 [tool.setuptools]
 package-dir = {"" = "src"}
