--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "tiktoken>=0.4.0",
     "anthropic>=0.20.0",
     "google-genai>=1.14.0",
+    "fastmcp>=2.3.0",
     "mypy",
     "ruff",
     "black",
